# IrgLab

./: CMakeLists.txt
irgLab/primjerASSIMP/sources/: main.cpp
irgLab/primjerOpenGL/sources/: Grafika.cpp  main.cpp
irgLab/vjezba1/sources/: Shader.cpp  main.cpp
irgLab/vjezba10/headers/: Light.hpp  Material.hpp  Object.hpp  Render.hpp  Shader.hpp  Transform.hpp
irgLab/vjezba10/shaders/: depth.geom  depth.vert  shader.frag  shader.vert
irgLab/vjezba10/sources/: main.cpp
irgLab/vjezba2/sources/: Grafika.cpp  main.cpp
irgLab/vjezba3/: CMakeLists.txt
irgLab/vjezba3/sources/: Shader.cpp  main.cpp
irgLab/vjezba4/headers/: Mesh.hpp  Object.hpp  Render.hpp  Transform.hpp
irgLab/vjezba4/sources/: main.cpp
irgLab/vjezba5a/headers/: Camera.hpp  Render.hpp  Shader.hpp  Transform.hpp
irgLab/vjezba5a/shaders/: shader.frag
irgLab/vjezba5a/sources/: main.cpp
irgLab/vjezba5b/headers/: Mesh.hpp  Render.hpp
irgLab/vjezba5b/shaders/: shader.vert
irgLab/vjezba5b/sources/: main.cpp
irgLab/vjezba6/headers/: Camera.hpp  Render.hpp  Shader.hpp
irgLab/vjezba6/shaders/: shader.frag  shader.geom  shader.vert  shader1.geom  shader1.vert
irgLab/vjezba6/sources/: main.cpp
irgLab/vjezba7/headers/: Curve.hpp  Object.hpp  Render.hpp
irgLab/vjezba7/shaders/: curve.frag  curve.vert  shader.geom
irgLab/vjezba7/sources/: main.cpp
irgLab/vjezba8a/headers/: Light.hpp  Material.hpp  Object.hpp  Render.hpp  Shader.hpp
irgLab/vjezba8a/shaders/: shader.frag  shader.geom  shader.vert
irgLab/vjezba8a/sources/: main.cpp
irgLab/vjezba8b/headers/: Light.hpp  Material.hpp  (+2 more)
(+27 files in other folders)
